# sflow_exporter

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  module.nix  package.nix  result
.github/workflows/: ci.yaml
src/: args.rs  main.rs  meta.rs  metrics.rs  utils.rs
src/sflow/: mod.rs  record.rs  sample.rs
